--- a/themes/H3-Theme/layouts/_default/baseof.html
+++ b/themes/H3-Theme/layouts/_default/baseof.html
@@ -14,8 +14,8 @@
 
                 {{end}}
 
-
-            {{ partial "footer.html" . }}
+                <!-- include the footer in the base content for barba reloads -->
+                {{ partial "footer.html" . }}
             </div>
         </div>
 
