--- a/themes/H3-Theme/layouts/page/presentation.html
+++ b/themes/H3-Theme/layouts/page/presentation.html
@@ -2,6 +2,7 @@
     <div class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
         <div class="content">
+            <!-- simply present the iframe or other html provided in the content section-->
             {{ .Content }}
         </div>
     </div>
