--- a/themes/H3-Theme/layouts/page/register.html
+++ b/themes/H3-Theme/layouts/page/register.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
     <div class="pad-top">
         <h1 class="title">Register</h1>
+        <!-- input information and register it in firebase authenitcation upon submission -->
         <div id="register-pane" class="content">
             <label>First Name:</label> <input id="register-first" type="text" placeholder="First Name"> <br>
             <label>Last Name:</label> <input id="register-last" type="text" placeholder="Last Name"> <br>
