--- a/themes/H3-Theme/layouts/partials/footer.html
+++ b/themes/H3-Theme/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div id="footer" class="alt">
 
     <div class="row">
-
+        <!-- contact information on the left half of the footer -->
         <div class="col">
             <h5>H3 (Ex-Herion)</h5>
             <p>Campo SS. Cosma e Damiano, 624-625<br>
@@ -12,6 +12,7 @@
             <p>contacts@serendpt.net</p>
 
         </div>
+        <!-- SerenDPT logo on the right half of the footer -->
         <div class="col">
             <div class="sdpt right">
                 <a href="https://new.serendpt.net/contatti"><img src="{{ .Site.Params.baseURL }}/img/SerenDPT-Tavola-disegno-3.svg" alt=""></a>
