--- a/themes/H3-Theme/layouts/page/eventform.html
+++ b/themes/H3-Theme/layouts/page/eventform.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     <div class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
-        <form id="eventForm" class="wide-content"> <!--method="post" action="mailto:pmaida1357@gmail.com"-->
+        <form id="eventForm" class="wide-content"> <!--method="post" action="mailto:ve18.h3@gmail.com"-->
             <div class="eventform-grid">
 
                 <!-- The progress bar tabs walking the user through the form -->
@@ -28,33 +28,7 @@
                                 <div id="datepicker"></div>
                             </div>
                             <div id="available-venues" class="venues-cell">
-                                <!--Dates for: <p id="date-chosen"></p>
-                                {{ range .Site.Data.events }}
-                                    <div class="venue-grid my-card">
-                                        <div class="image-cell">
-                                            <img class="card-image" src="{{ .image }}" alt="">
-                                        </div>
-                                        <div class="title-cell">
-                                            {{ .name }}
-                                        </div>
-                                        <div class="description-cell">
-                                            <ul class="event-description">
-                                            {{ range .description }}
-                                                <li>{{ . }}</li>
-                                            {{ end }}
-                                            </ul>
-                                        </div>
-                                        <div class="time-cell">
-                                            {{ range .events }}
-                                                {{ . }}
-                                            {{ end }}
-                                            Time1<br>
-                                            Time2<br>
-                                            Time3<br>
-                                            Time4<br>
-                                        </div>
-                                    </div>
-                                {{ end }}-->
+                                <!-- dynamically fill this with database query -->
                             </div>
                         </div>
                     </div>
@@ -83,7 +57,7 @@
                         <label for="eventDescription">Description:</label><input id="eventDescription" type="text"><br>
                     </div>
 
-                    <!-- Amenities selection tab content -->
+                    <!-- Amenities tab content -->
                     <div id="Amenities" class="tabcontent">
                         <h3>Amenities</h3>
                         <ul>
@@ -132,97 +106,5 @@
             </div>
         </form>
 
-
-
     </div>
-    <!--
-        <div>
-            <h2>Event</h2>
-            <div class="row">
-                <div class="column">
-                    Is event within a series?
-                    <br>
-                    Yes<input type="radio" name="series">
-                    No<input type="radio" name="series">
-                    <br>
-                    Will any VIP's be attending?
-                    <br>
-                    Yes<input type="radio" name="VIP">
-                    No<input type="radio" name="VIP">
-                    <br>
-                    If so, list any special needs of the VIP(s)
-                    <br>
-                    <input type="text">
-                </div>
-
-                <div class="column">
-                    Will non-SerenDPT guests attend?
-                    <br>
-                    Yes<input type="radio" name="guests">
-                    No<input type="radio" name="guests">
-                    <br>
-                    If so, what portion of the guests will be external?
-                    <br>
-                    &lt50%<input type="radio" name="external">
-                    &gt=50%<input type="radio" name="external">
-                    <br>
-                    Will any external speakers, performers, or artists attend the event?
-                    <br>
-                    Yes<input type="radio" name="culture">
-                    No<input type="radio" name="culture">
-                    <br>
-                    If so, whom?
-                    <br>
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-
-        <div>
-            <h2>Location</h2>
-            Preferred primary location: <input type="text">
-            <br>
-            Alternate location if primary is unavailable: <input type="text">
-            <br>
-            Alternate location if weather is non-permitting
-            <br>
-            Indoors<input type="radio" name="badWeather">
-            Tent<input type="radio" name="badWeather">
-            Alternate Date<input type="radio" name="badWeather">
-            <br>
-            Do you need additional spaces>
-            Yes<input type="radio" name="additionalSpace">
-            No<input type="radio" name="additionalSpace">
-            <br>
-            If so, please describe:
-            <br>
-            <input type="text">
-        </div>
-
-        <div>
-            <h2>Catering</h2>
-            Will food or beverage be served?
-            <br>
-            Yes<input type="radio" name="food">
-            No<input type="radio" name="food">
-            <br>
-            If so, where will the food come from?
-            <br>
-            Food in-house <input type="text">
-            <br>
-            Caterer <input type="text">
-            <br>
-            Will alcohol be served at this event?
-            <br>
-            Yes<input type="radio" name="alcohol">
-            No<input type="radio" name="alcohol">
-            <br>
-            What percentage of attendees will be over 18?
-            <br>
-            &lt50%<input type="radio" name="legal">
-            &gt=50%<input type="radio" name="legal">
-            100%<input type="radio" name="legal">
-        </div>
-
-        -->
 {{end}}
