--- a/themes/H3-Theme/layouts/page/events.html
+++ b/themes/H3-Theme/layouts/page/events.html
@@ -1,7 +1,9 @@
 {{ define "main" }}
 
+    <!-- Carousel of showcased events at top of screen -->
     <div id="carousel" class="carousel" data-ride="carousel" data-interval="5000">
 
+        <!-- the icons at the bottom of the carousel to jump to a slide -->
         <ol class="carousel-indicators">
             {{ range $index, $element := .Params.events }}
                 {{ if eq $index 0 }}
@@ -12,6 +14,7 @@
             {{ end }}
         </ol>
 
+        <!-- The images that rotate around the carousel -->
         <div class="carousel-inner">
             {{ range $index, $element := .Params.events }}
                 {{ if eq $index 0 }}
@@ -38,6 +41,7 @@
             {{ end }}
         </div>
 
+        <!-- showcase buttons to change slides -->
         <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -49,13 +53,16 @@
 
     </div>
 
+    <!-- the icon to scroll the page down -->
     <div class="scroll-container">
         <i class="fas fa-chevron-down scroll" onclick="scrollDown()"></i>
     </div>
 
+    <!-- the div that will be scrolled to -->
     <div id="scroll-target">
         <div class="content section">
             <h2>Upcoming Events</h2>
+            <!-- list upcoming events in the space -->
             {{ range .Params.events }}
                 <div class="block-grid shift-card-mild">
                     <div class="img-cell">
