--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -7,6 +7,7 @@
     color: white;
     position: relative;
     z-index: 999;
+    text-align: left;
     p {
         color: white;
         font-size: 14;
