--- a/themes/H3-Theme/layouts/partials/header.html
+++ b/themes/H3-Theme/layouts/partials/header.html
@@ -1,130 +1,19 @@
-<!--<nav class="navbar fixed-top navbar-expand-lg">
-
-    <a href="{{ .Site.BaseURL }}" class="logo"> <img src="{{ .Site.Params.baseURL }}/img/H3 Logo.png" alt="" onclick="resetHighlights()"/></a>
-
-    <div class="navbar-nav ml-auto">
-        {{ range .Site.Params.Navigation.links }}
-            {{ if (isset . "target") }}
-                <a id="{{ .url }}-tab" class="nav-item nav-link guest-access" href="{{ .url | absURL }}" target="{{ .target }}">{{ .name }}</a>
-            {{ else }}
-                <a id="{{ .url }}-tab" class="nav-item nav-link guest-access" href="{{ .url | absURL }}" onclick="updatePage(/{{ .url }}/)">{{ .name }}</a>
-            {{ end }}
-        {{ end }}
-
-        <a id="login-btn" class="btn btn-light my-2 my-sm-0" role="button" onclick="openLogin()">Login</a>
-        <a id="admin-btn" class="btn btn-light my-2 my-sm-0" role="button" onclick="openAdmin();">H3 Admin</a>
-
-    </div>
-
-    <div id="login-drawer">
-        <label for="login-email">Email:</label><br>
-        <input id="login-email" type="email" placeholder="Email"> <br>
-        <label for="login-password">Password:</label><br>
-        <input id="login-password" type="password" placeholder="Password"> <br>
-        <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="login()">
-    </div>
-
-    <div id="admin-drawer">
-        <ul id="admin-links">
-            <li><a id="documents-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
-            <li><a id="design-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}design" onclick="updatePage(/design/);closeAdmin();">Design Contest</a></li>
-            <li><a id="rlab-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}rlab" onclick="updatePage(/rlab/);closeAdmin();">R-Lab</a></li>
-        </ul>
-
-        <a id="logout-btn" class="btn btn-light my-2 my-sm-0" href="{{ .Site.BaseURL }}" onclick="logout();resetHighlights();" role="button">Logout</a>
-    </div>
-</nav>-->
-
-
-
-
-<!--<nav class="navbar fixed-top navbar-expand-lg">
-
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">WebSiteName</a>
-        </div>
-        <div class="navbar-nav ml-auto">
-            {{ range .Site.Params.Navigation.links }}
-                {{ if (isset . "target") }}
-                    <a id="{{ .url }}-tab" class="nav-item nav-link guest-access" href="{{ .url | absURL }}" target="{{ .target }}">{{ .name }}</a>
-                {{ else }}
-                    <a id="{{ .url }}-tab" class="nav-item nav-link guest-access" href="{{ .url | absURL }}" onclick="updatePage(/{{ .url }}/)">{{ .name }}</a>
-                {{ end }}
-            {{ end }}
-
-            <a id="login-btn" class="btn btn-light my-2 my-sm-0" role="button" onclick="openLogin()">Login</a>
-            <a id="admin-btn" class="btn btn-light my-2 my-sm-0" role="button" onclick="openAdmin();">H3 Admin</a>
-        </div>
-    </div>
-
-    <a href="{{ .Site.BaseURL }}" class="logo"> <img src="{{ .Site.Params.baseURL }}/img/H3 Logo.png" alt="" onclick="resetHighlights()"/></a>
-
-
-
-    <div id="login-drawer">
-        <label for="login-email">Email:</label><br>
-        <input id="login-email" type="email" placeholder="Email"> <br>
-        <label for="login-password">Password:</label><br>
-        <input id="login-password" type="password" placeholder="Password"> <br>
-        <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="login()">
-    </div>
-
-    <div id="admin-drawer">
-        <ul id="admin-links">
-            <li><a id="documents-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
-            <li><a id="design-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}design" onclick="updatePage(/design/);closeAdmin();">Design Contest</a></li>
-            <li><a id="rlab-tab" class="nav-item nav-link" href="{{ .Site.BaseURL }}rlab" onclick="updatePage(/rlab/);closeAdmin();">R-Lab</a></li>
-        </ul>
-
-        <a id="logout-btn" class="btn btn-light my-2 my-sm-0" href="{{ .Site.BaseURL }}" onclick="logout();resetHighlights();" role="button">Logout</a>
-    </div>
-</nav>-->
-
-
-
-
-
-<!--<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">History</a></li>
-        <li><a href="#">Startups</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Spaces</a></li>
-        <li><a href="#">Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>-->
-
 <nav class="navbar fixed-top navbar-expand-md">
 
+    <!-- H3 icon -->
     <a class="navbar-brand" href="{{ .Site.BaseURL }}"> <img src="{{ .Site.Params.baseURL }}/img/H3 Logo.png" alt="" onclick="resetHighlights()"/></a>
 
+    <!-- hamburger icon that appears when the navbar collapses -->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#unique_id_x">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-
+    <!-- navigation links -->
     <div class="collapse navbar-collapse" id="unique_id_x">
         <ul class="navbar-nav navbar-right ml-auto">
 
             {{ range .Site.Params.Navigation.links }}
+                <!-- if the link opens with a target, use it. AKA "_blank" in a new tab -->
                 {{ if (isset . "target") }}
                     <li class="nav-item">
                         <a id="{{ .url }}-tab" class="nav-link guest-access" href="{{ .url | absURL }}" target="{{ .target }}">{{ .name }}</a>
@@ -136,6 +25,7 @@
                 {{ end }}
             {{ end }}
 
+            <!-- two seperate buttons for login and admin (logged in) -->
             <li class="nav-item">
                 <a id="login-btn" class="btn btn-light my-2 my-sm-0" role="button" onclick="openLogin()">Login</a>
             </li>
@@ -146,6 +36,7 @@
         </ul>
     </div>
 
+    <!-- the drawer that gets pulled out to log in -->
     <div id="login-drawer">
         <label for="login-email">Email:</label><br>
         <input id="login-email" type="email" placeholder="Email"> <br>
@@ -154,6 +45,7 @@
         <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="login()">
     </div>
 
+    <!-- the drawer that is pulled out to access admin information -->
     <div id="admin-drawer">
         <ul id="admin-links">
             <li><a id="documents-tab" class="nav-item" href="{{ .Site.BaseURL }}documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
