--- a/public/scss/components/button.scss
+++ b/public/scss/components/button.scss
@@ -4,12 +4,7 @@
     background-color: _palette(accent1);
     color: black;
     font-size: 18;
-    padding-top: 1px;
-    padding-bottom: 0px;
-    height: 33px;
-    position: relative;
-    top: 3px;
-    //box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
+    padding: 5px 10px;
 
     &:hover{
         border-color: _palette(accent1);
@@ -20,8 +15,5 @@
 
 .btn-large {
     font-size: 24;
-    padding-top: 5px;
-    padding-bottom: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 5px 40px;
 }
