--- a/themes/H3-Theme/layouts/page/documents.html
+++ b/themes/H3-Theme/layouts/page/documents.html
@@ -2,7 +2,8 @@
     <div class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
         <div class="content">
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1IvMV8jLsnaFUOHtOd_Ws23LzJ9K0Ouw3#list" style="width:100%; height:600px; border:0;"></iframe>
+            <!-- Currently only presents the files as they are in Google Drive -->
+            {{ .Content }}
         </div>
     </div>
 {{end}}
