--- a/themes/H3-Theme/layouts/page/eventform.html
+++ b/themes/H3-Theme/layouts/page/eventform.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <!-- The recipt on the right side of the screen -->
+                <!-- The receipt on the right side of the screen -->
                 <div class="receipt-cell">
                     <div id="receipt">
                         <h5 id="receipt-title">Receipt</h5>
