--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -13,12 +13,11 @@
     firebase.initializeApp(config);
 </script>
 
-
+<!-- Barba.js -->
 <script src="../js/barba.min.js" type="text/javascript"></script>
 
 
-
-
+<!-- custom scripts -->
 <script src="../js/main.js" type="text/javascript"></script>
 <script src="../js/events.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
